// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(ListSubsection)
    title="test"
  >
    <ListSubsection
      intl={
        {
          "defaultFormats": {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": {},
          "formatters": {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isCollapsed={false}
      isCollapsible={false}
      level={2}
      title="test"
      zIndex={6001}
    >
      <ListSubsectionHeader
        isCollapsed={false}
        isCollapsible={false}
        level={2}
        title="test"
      >
        <li
          className="list-item orion-fusion-theme"
        >
          <h2
            className="title"
          >
            <div
              className="subsection-header"
            >
              <div
                className="fill"
              >
                test
              </div>
            </div>
          </h2>
        </li>
      </ListSubsectionHeader>
      <li
        className="list-item"
      >
        <ul
          className="list list-fill orion-fusion-theme"
          onKeyDown={[Function]}
        />
      </li>
    </ListSubsection>
  </InjectIntl(ListSubsection)>
</ThemeContextProvider>
`;

exports[`should render with callback functions 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    onSelect={[MockFunction]}
    refCallback={[MockFunction]}
    title="test"
  />
  <li
    className="list-item"
  >
    <ul
      className="list list-fill"
      onKeyDown={[Function]}
    />
  </li>
</Fragment>
`;

exports[`should render with isCollapsed 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={true}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <li
    className="list-item"
  >
    <ul
      className="list list-fill"
      onKeyDown={[Function]}
    />
  </li>
</Fragment>
`;

exports[`should render with isCollapsible 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={true}
    level={2}
    title="test"
  />
  <li
    className="list-item"
  >
    <ul
      className="list list-fill"
      onKeyDown={[Function]}
    />
  </li>
</Fragment>
`;

exports[`should render with items 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <li
    className="list-item"
  >
    <ul
      className="list list-fill"
      onKeyDown={[Function]}
    >
      <InjectIntl(ListItem)
        key="123"
      />
      <InjectIntl(ListItem)
        key="124"
      />
      <InjectIntl(ListItem)
        key="125"
      />
      <InjectIntl(ListItem)
        key="126"
      />
      <InjectIntl(ListItem)
        key="127"
      />
    </ul>
  </li>
</Fragment>
`;

exports[`should render with level 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="test"
  />
  <li
    className="list-item"
  >
    <ul
      className="list list-fill"
      onKeyDown={[Function]}
    />
  </li>
</Fragment>
`;

exports[`should render with no items 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <li
    className="list-item"
  >
    <ul
      className="list list-fill"
      onKeyDown={[Function]}
    />
  </li>
</Fragment>
`;
